examples/kustomize/social-media-manager/transformers/ingress-transformer.yaml
apiVersion: builtin
kind: PatchTransformer
metadata:
  name: ingress-patch
patch: |-
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: social-media-manager-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rate-limit: "100"
spec:
  tls:
    - hosts:
        - social-media-manager.grc-claw.example.com
      secretName: social-media-manager-tls
  rules:
    - host: social-media-manager.grc-claw.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: social-media-manager
                port:
                  number: 80

target:
  kind: Deployment
  name: social-media-manager
